<resources>
    <string name="app_name" translatable="false">RB-Avionics</string>
    <string name="defaultUrl" translatable="false">https://192.168.10.1/RB-01</string>
    <string name="defaultUrlPath" translatable="false">/RB-01</string>
    <string name="apiRelUrl" translatable="false">/radio</string>
    <string name="connection_error_info_text">Unable to establish WiFi connection to the RB-Avionics device. Checklist:\n
1) Connect to RB-Avionics using WiFi by selecting RB-01\n
2) Check for successful connection\n
3) Confirm RB-Avionics web address: %1$s</string>
    <string name="retry_button_label">Retry</string>
    <string name="save_and_retry_button_label">Save and retry</string>

    <string name="ssl_error_title">Security Warning</string>
    <string name="ssl_error_message">The security certificate for this site is not trusted. Do you want to continue anyway?</string>
    <string name="ssl_error_continue">Continue</string>
    <string name="ssl_error_cancel">Cancel</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="browser_header">Browser</string>
    <string name="setting_screen_header">Settings screen</string>

    <!-- Browser Preferences -->
    <string name="site_url_title">Site url</string>
    <string name="back_button_title">Back button behaviour</string>
    <string name="api_timeout_title">API timeout (seconds)</string>
    <string name="keep_screen_on_title">Keep screen always on</string>

    <!-- Settings Preferences -->
    <string name="settings_timeout">Timeout in seconds for settings button</string>
    <string name="settings_timeout_warning_title">Warning</string>
    <string name="settings_timeout_warning_text">If the timeout value is too low, you may not be able to press the button in time. In this case, you need to clear the app settings from your Android system settings. Are you sure?</string>

    <!-- Info Preferences -->
    <string name="info_header">Information</string>
    <string name="version_title">App Version</string>
</resources>